env/code_53e4d6155569d/stderr.txt
  File "main.py", line 11
    make_sure_path_exists(/home/navs)
                          ^
SyntaxError: invalid syntax
